--- a/vignettes/traitdataform.Rmd
+++ b/vignettes/traitdataform.Rmd
@@ -26,7 +26,7 @@ There are two major use cases for the package:
 The toolset of the package includes
 
 1. transforming typical trait-data formats (e.g. species-trait-matrix or measurement-table data) into a unified long-table format and mapping column names into terms provided in the Ecological Trait-data Standard (ETS) (see section [1. Reading data](#reading-data)),
-2. mapping of trait concepts onto a user-provided traitlist (i.e. a thesaurus of traits) or globally accessible URIs  (see section [2. Standardize traits](#standardize-traits)) and unify units and factor levels (see vignete ['Handling units with trait-data'](traitdataform-units.html)),
+2. mapping of trait concepts onto a user-provided traitlist (i.e. a thesaurus of traits) or globally accessible URIs  (see section [2. Standardize traits](#standardize-traits)) and unify units and factor levels (see vignette ['Handling units with trait-data'](traitdataform-units.html)),
 3. mapping of species concepts onto globally accessible definitions via URIs (pointing to GFBio taxonomic ontology server) (see section [3. Standardize taxa](#standardize-taxa)), 
 4. Merging and handling compiled trait-data, while keeping track of the metadata for each original dataset (see section [4. Working with trait-datasets](#working-with-trait-datasets)) 
 5. saving trait dataset into a desired format using templates (e.g. for project-specific databases or online repositories) (see section [5. Writing data](#writing-data)) 
@@ -59,9 +59,9 @@ carabids <- read.delim("https://datadryad.org/bitstream/handle/10255/dryad.13441
 Most trait data are stored in one of the following two formats:
 
 - **species$\times$trait matrix** :  a single account of a trait value for each species (in rows) for a couple of different traits (in columns). No replicates of species are reported. This is the most likely format for literature data, where aggregate measurements or facts for entire species have been collated into a single lookup table. 
-- **observation wide table** :  in case of measured data, authors may report multiple raw measurements of different traits (in columns) taken from a single observation instance of a species, i.e. an individual (in rows). Repeated measures of the same trait might also be included as columns or pooled into average values. This is valuable for investigations of intra-specific variation, and also leaves space for filtering by cofactors or analysing trait response along environmental gradients.
+- **observation wide table** :  in case of measured data, authors may report multiple raw measurements of different traits (in columns) taken from a single observation instance of a species, i.e. an individual (in rows). Repeated measures of the same trait might also be included as columns or pooled into average values. This is valuable for investigations of intra-specific variation, and also leaves space for filtering by co-factors or analyzing trait response along environmental gradients.
 
-In both cases, additional information on the species or observation may be stored in further colums (e.g. the unit in which a value is reported or the literature source for this measurement or fact, or the date and geolocation of sampling), or in a separate data sheet linked via identifiers for trait, taxon, occurrence or sampling/measurement event.
+In both cases, additional information on the species or observation may be stored in further columns (e.g. the unit in which a value is reported or the literature source for this measurement or fact, or the date and geolocation of sampling), or in a separate data sheet linked via identifiers for trait, taxon, occurrence or sampling/measurement event.
 As the column names and the width of the table varies with the number of traits included, merging data from different sources requires user-defined mapping and manual harmonization of these structures. 
 
 A more effective format is the **measurement long-table** [@wickham14; @parr16; @kattge11a], where each row is reserved for a single measurement or fact of a specific trait.
@@ -127,7 +127,7 @@ Often, this information is kept in the metadata descriptions. But for a standard
 The ETS suggests the term `traitUnit` to contain the unit for each measurement in the data table. 
 
 The function `as.traitdata()` creates this column via its parameter `units` (see example above). 
-This can be done for all traits in a single stroke (if all reported values refer to the same unit) or to each trait specifically (if they used different measuremnt units or if the table comprises a mixture of quantitative and qualitative traits).  
+This can be done for all traits in a single stroke (if all reported values refer to the same unit) or to each trait specifically (if they used different measurement units or if the table comprises a mixture of quantitative and qualitative traits).  
 Accordingly, the parameter `units` takes a single character string, or a vector of character strings, containing valid entries as expected  by the package 'units' (Pebesma et al. 2016, https://github.com/edzer/units/, v0.4-5, Examples are 'mm', 'm2' or 'm^2', 'm/s' ). 
 
 The vignette ["Handling units with trait-data"](traitdataform-units.html) cover the various use cases of unit assignments and harmonizing trait-data with different units and different factor levels in depth. 
@@ -138,7 +138,7 @@ The vignette ["Handling units with trait-data"](traitdataform-units.html) cover 
 The raw data might contain further information on the individuals or the trait measurement itself in further data columns that are valuable for later analysis. 
 This can be for instance data about the sex or developmental stage of the individual, the sampling or preservation method of the specimen, or the conditions under which the measurement was taken. 
 
-The parameter `keep` allows you to specify which columns contain valuable information as a character vector. As a negative version of `keep`, specifying `drop` would allow you to name the columns that are not valueable, while all others will be kept. Not specifying `keep` or `drop` will result in dropping all columns except the core measurement and identifier columns.  
+The parameter `keep` allows you to specify which columns contain valuable information as a character vector. As a negative version of `keep`, specifying `drop` would allow you to name the columns that are not valuable, while all others will be kept. Not specifying `keep` or `drop` will result in dropping all columns except the core measurement and identifier columns.  
 
 ```{r}
 dataset2 <- as.traitdata(heteroptera_raw,
@@ -161,9 +161,9 @@ The three extensions of the ETS provide standard terms for this kind of informat
 
 - The [`Taxon` extension](https://terminologies.gfbio.org/terms/ets/pages/#extension-taxon) provides further terms for specifying the taxonomic resolution of the observation and to ensure the correct reference in case of synonyms and homonyms.
 - The [`Measurement Or Fact` extension](https://terminologies.gfbio.org/terms/ets/pages/#extension-measurement-or-fact)  provides terms to describe information at the level of single measurements or reported facts, such as the original literature reference for the reported value, the method of measurement or statistical method of aggregation. It provides important information that allows for the tracking of potential sources of noise or bias in measured data (e.g. variation in measurement method) or aggregated values (e.g. statistical method), as well as the source of reported facts (e.g. literature source or expert reference). 
-- The [`Occurrence` extension](https://terminologies.gfbio.org/terms/ets/pages/#extension-occurrence) contains vocabulary to describe information on the observation context of individual specimens, such as sex, life stage or age. This also includes the method of sampling and preservation, as well as the date and geographical location, which provide an important resource to analyse trait variation due to differences in space and time. 
+- The [`Occurrence` extension](https://terminologies.gfbio.org/terms/ets/pages/#extension-occurrence) contains vocabulary to describe information on the observation context of individual specimens, such as sex, life stage or age. This also includes the method of sampling and preservation, as well as the date and geographical location, which provide an important resource to analyze trait variation due to differences in space and time. 
 
-We highly reccomend mapping the input columns into these standard terms by providing a named vector for `keep` that gives the target ETS terms as vector names. 
+We highly recommend mapping the input columns into these standard terms by providing a named vector for `keep` that gives the target ETS terms as vector names. 
 
 ```{r}
 dataset2 <- as.traitdata(heteroptera_raw,
@@ -248,8 +248,8 @@ We now turn to the challenging task of standardisation.
 
 The field `traitID` is meant to contain a globally valid reference to a trait definition that applies to the measurement in question. 
 Due to the heterogeneity of approaches, research questions and taxonomic focus in trait-based research, it is hard to come up with universal trait definitions that can be employed in each and every research context. 
-The mode of measurement or the precise prescriptions of a sampling procedure have been formalised into published handbooks,  [e.g. @cornelissen03; @perez-harguindeguy13; or for invertebrates, @moretti17], but are of limited use in harmonising trait data that pre-date or ignore this standard. Thesauri, e.g. the TOP Thesaurus of plant traits [@garnier17, employed by TRY] or Gramene.org offer definitions of plant traits in a formal language. For soil invertebrates, the T-SITA thesaurus offers a set of traits relevant for this organism group [see @schneider18 for a more detailled distinction of thesauri and ontologies]. 
-All in all, only for few organism groups and trait methodologies exist Unique Ressource Identifiers (URIs) that provide a stable reference to an unambiguous definition and can be referenced from the dataset. 
+The mode of measurement or the precise prescriptions of a sampling procedure have been formalized into published handbooks,  [e.g. @cornelissen03; @perez-harguindeguy13; or for invertebrates, @moretti17], but are of limited use in harmonising trait data that pre-date or ignore this standard. Thesauri, e.g. the TOP Thesaurus of plant traits [@garnier17, employed by TRY] or Gramene.org offer definitions of plant traits in a formal language. For soil invertebrates, the T-SITA thesaurus offers a set of traits relevant for this organism group [see @schneider18 for a more detailed distinction of thesauri and ontologies]. 
+All in all, only for few organism groups and trait methodologies exist Unique Resource Identifiers (URIs) that provide a stable reference to an unambiguous definition and can be referenced from the dataset. 
 
 
 ### Refer to trait definitions via URIs
@@ -323,7 +323,7 @@ This can be a csv or txt file, or a website providing direct and stable links to
 This reference file should contain at least the following fields for each trait concept: 
 
 - `trait` should be a short descriptive name. No spaces should be used. Rather use a scheme with underscore or capital letters to highlight multiple words (e.g. 'body_length' or 'bodyLenght').
-- `traitDescription`: a detailled and unambiguous, human readable definition.
+- `traitDescription`: a detailed and unambiguous, human readable definition.
 - `valueType` to specify the expected kind of entries. Set it to 'numeric' for quantitative traits, 'integer' for counts or ordinal traits, 'character' for trait values that are provided as free text, 'factor' for traits that take one of few non-ordinal levels, 'logical' for binary/boolean entries (yes/no).  
   - For *numeric traits*, the parameter `expectedUnit` should provide the expected unit for the trait. The R script will then try to convert trait values into this unit. 
   - for *categorical traits* of kind 'factor' or 'integer', the field `factorLevels` should contain a list the valid factorial traits separated by semicolon. In case of ordinal traits, the order must be precisely corresponding to the number of possible integer values. 
@@ -546,7 +546,7 @@ dataset1 <- as.traitdata(carabids,
 head(dataset1)
 ```
 
-Note the use of the `bibentry()` function to create a formal bibliographic entry. Also note that this also affects the way how the dataset is printed into the R console. This facilitates for data users to acknowledge authorship and ownership of the data, while alsow providing a machine readable structure that can easily be accessed further down the line. 
+Note the use of the `bibentry()` function to create a formal bibliographic entry. Also note that this also affects the way how the dataset is printed into the R console. This facilitates for data users to acknowledge authorship and ownership of the data, while also providing a machine readable structure that can easily be accessed further down the line. 
 
 ```{r}
 metadata2 <- as.metadata(
@@ -583,7 +583,7 @@ database <- rbind(dataset1, dataset2,
 head(database)
 ```
 
-The detailled metadata information of both datasets (e.g. license and bibliographic citation) will be stored in the attributes of the dataset and displayed when calling it in R console. You can access the metadata via the `attributes()`  function. E.g.
+The detailed metadata information of both datasets (e.g. license and bibliographic citation) will be stored in the attributes of the dataset and displayed when calling it in R console. You can access the metadata via the `attributes()`  function. E.g.
 
 ```{r}
 attributes(dataset1)$metadata$bibliographicCitation
@@ -639,7 +639,7 @@ attr(carabids, 'keep') <-  c(measurementDeterminedBy = "source_measurement", mea
 
 ```
 
-When thus specified, the data can be re-formated simply by calling `standardize(carabids)`. 
+When thus specified, the data can be re-formatted simply by calling `standardize(carabids)`. 
 
 <!--
 ## add data layers
@@ -669,8 +669,8 @@ head(dataset3wide)
 
 # 5. Writing data 
 
-The final step in converting trait data into a standardised format before uploading the file to a public file hosting service is saving them in a file format that is internationalized, portable and long-term accessible . 
-Internationalization refers to the file encoding ('UTF-8' should be used, 'ASCII' is possible for data with no special characters) as well as the use of decimal delimiters (highly recommended to use '.') and internationally accepted formatting standards for values such as dates (the international norm for date entries is  ISO 8601, i.e. “YYYY-MM-DD”). Portability means that the file can be opened on all operating systems (specifically important, the 'end of line' character) and does not rely on proprietary software (like MS Excel or database tools). Long-term accessibility is warranted by chosing a text-based file format (txt, csv or tsv) and by packaging the primary data with all neccessary metadata.
+The final step in converting trait data into a standardised format before uploading the file to a public file hosting service is saving them in a file format that is internationalized, portable and long-term accessible. 
+Internationalization refers to the file encoding ('UTF-8' should be used, 'ASCII' is possible for data with no special characters) as well as the use of decimal delimiters (highly recommended to use '.') and internationally accepted formatting standards for values such as dates (the international norm for date entries is  ISO 8601, i.e. "YYYY-MM-DD"). Portability means that the file can be opened on all operating systems (specifically important, the 'end of line' character) and does not rely on proprietary software (like MS Excel or database tools). Long-term accessibility is warranted by choosing a text-based file format (txt, csv or tsv) and by packaging the primary data with all necessary metadata.
 
 The base R function `write.table()` gives full control over these parameters and should be used to export trait-data.
 
@@ -679,7 +679,7 @@ write.table(dataset1Std, file = "carabids_std.csv",
             sep = ",", dec = ".", quote = TRUE, eol = "\r", row.names = FALSE)
 ```
 
-Along with these primary data, you should make any ancilliary data table available along with the data, e.g. the metadata in a human readable form, as well as the lookup table of traits and taxa:
+Along with these primary data, you should make any ancillary data table available along with the data, e.g. the metadata in a human readable form, as well as the lookup table of traits and taxa:
 
 ```{r, eval = FALSE}
 capture.output(attributes(dataset1Std)$metadata, file = "metadata.txt")
