Hyperlink DOIs to preferred resolver

--- a/vignettes/div05.bib
+++ b/vignettes/div05.bib
@@ -2228,7 +2228,7 @@ CONCLUSIONS/SIGNIFICANCE: This approach could be widely applied in microbial eco
   issn = {1866-3508},
   url = {https://www.earth-syst-sci-data.net/9/99/2017/},
   doi = {https://doi.org/10.5194/essd-9-99-2017},
-  abstract = {The trait-based approach is gaining increasing popularity in marine plankton ecology but the field urgently needs more and easier accessible trait data to advance. We compiled trait information on marine pelagic copepods, a major group of zooplankton, from the published literature and from experts and organized the data into a structured database. We collected 9306 records for 14 functional traits. Particular attention was given to body size, feeding mode, egg size, spawning strategy, respiration rate, and myelination (presence of nerve sheathing). Most records were reported at the species level, but some phylogenetically conserved traits, such as myelination, were reported at higher taxonomic levels, allowing the entire diversity of around 10 800 recognized marine copepod species to be covered with a few records. Aside from myelination, data coverage was highest for spawning strategy and body size, while information was more limited for quantitative traits related to reproduction and physiology. The database may be used to investigate relationships between traits, to produce trait biogeographies, or to inform and validate trait-based marine ecosystem models. The data can be downloaded from PANGAEA, $<$a href="http://dx.doi.org/10.1594/PANGAEA.862968" target="\_blank"$>$doi:10.1594/PANGAEA.862968$<$/a$>$.},
+  abstract = {The trait-based approach is gaining increasing popularity in marine plankton ecology but the field urgently needs more and easier accessible trait data to advance. We compiled trait information on marine pelagic copepods, a major group of zooplankton, from the published literature and from experts and organized the data into a structured database. We collected 9306 records for 14 functional traits. Particular attention was given to body size, feeding mode, egg size, spawning strategy, respiration rate, and myelination (presence of nerve sheathing). Most records were reported at the species level, but some phylogenetically conserved traits, such as myelination, were reported at higher taxonomic levels, allowing the entire diversity of around 10 800 recognized marine copepod species to be covered with a few records. Aside from myelination, data coverage was highest for spawning strategy and body size, while information was more limited for quantitative traits related to reproduction and physiology. The database may be used to investigate relationships between traits, to produce trait biogeographies, or to inform and validate trait-based marine ecosystem models. The data can be downloaded from PANGAEA, $<$a href="https://doi.org/10.1594/PANGAEA.862968" target="\_blank"$>$doi:10.1594/PANGAEA.862968$<$/a$>$.},
   number = {1},
   journaltitle = {Earth System Science Data},
   urldate = {2017-12-13},
